*** empty log message ***

--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -379,7 +379,7 @@ He implemented the FDDI model (practically unchanged until now), and added
 some extensions into NED for SSM. These extensions have been removed
 since then ({\opp} 3.0 does parallel execution on different principles).
 
-The P$^{2}$ algorithm and the original implementation of the k-split algorithm
+The $P^{2}$ algorithm and the original implementation of the k-split algorithm
 was programmed in fall 1996 by Babak Fakhamzadeh from TU Delft.
 k-split was later reimplemented by Andr\'{a}s.
 
