--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -196,7 +196,7 @@ The following classes are part of the simulation class library:
   \item{messages}
   \item{container classes (e.g. queue, array)}
   \item{data collection classes}
-  \item{statistic and distribution estimation classes (histograms, P$^2$
+  \item{statistic and distribution estimation classes (histograms, $P^2$
   algorithm for calculating quantiles etc.)}
   \item{transient detection and result accuracy detection classes}
 \end{itemize}
