--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1054,9 +1054,9 @@ The following units\index{time units} can be used:
 \hline
 \tabheadcol
 \tbf{Unit} & \tbf{Meaning} \\\hline
-\ttt{ns}   & nanoseconds (10$^-9$s) \\\hline
-\ttt{us}   & microseconds (10$^-6$s) \\\hline
-\ttt{ms}   & milliseconds (10$^-3$s) \\\hline
+\ttt{ns}   & nanoseconds ($10^{-9}$s) \\\hline
+\ttt{us}   & microseconds ($10^{-6}$s) \\\hline
+\ttt{ms}   & milliseconds ($10^{-3}$s) \\\hline
 \ttt{s}    & seconds \\\hline
 \ttt{m}    & minutes (60s) \\\hline
 \ttt{h}    & hours (3600s) \\\hline
@@ -1619,7 +1619,7 @@ vica versa.
 
 Though this pattern is very general, its usage can be prohibitive if
 the \textit{N} number of nodes is high and the graph is sparse (it has
-much fewer connections that \textit{N}$^{\mathit{2}}$). The following
+much fewer connections that $N^2$). The following
 two patterns do not suffer from this drawback.
 
 
