*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1054,9 +1054,9 @@ The following units\index{time units} can be used:
 \hline
 \tabheadcol
 \tbf{Unit} & \tbf{Meaning} \\\hline
-\ttt{ns}   & nanoseconds ($10^{-9}$s) \\\hline
-\ttt{us}   & microseconds ($10^{-6}$s) \\\hline
-\ttt{ms}   & milliseconds ($10^{-3}$s) \\\hline
+\ttt{ns}   & nanoseconds) \\\hline
+\ttt{us}   & microseconds \\\hline
+\ttt{ms}   & milliseconds \\\hline
 \ttt{s}    & seconds \\\hline
 \ttt{m}    & minutes (60s) \\\hline
 \ttt{h}    & hours (3600s) \\\hline
