*** empty log message ***

--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -216,7 +216,7 @@ The manual is organized the following way:
     \ref{cha:neddoc}
     elaborate the topic further, by explaining how one can customize
     the network graphics and how to write NED source code comments
-    from which documentation can be generated.
+    from which documentation can be generated.}
   \item{The following chapters,
     \ref{cha:building-simulation-programs},
     \ref{cha:run-sim} and
