--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -1318,7 +1318,7 @@ Register_Class(STLMessage);
 Some additional notes:
 
 \begin{enumerate}
-  \item{\ttt{setFooArraySize()}, \ttt{setBarArraySize()} are redundant.
+  \item{\ttt{setFooArraySize()}, \ttt{setBarArraySize()} are redundant.}
   \item{\ttt{getBar(int k)} cannot be implemented in a straightforward way
      (\ttt{std::stack} does not support accessing elements by index).
      It could still be implemented in a less efficient way using STL iterators,
