--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1210,7 +1210,7 @@ cXMLElement *rootelement = par("xmlparam").xmlValue();
 The \cclass{cXMLElement} class provides a DOM-like access to the XML document.
 You can then navigate the document tree, extract the information you need,
 and store it in variables or your internal data structure.
-\cclass{cXMLElement} is documented in Chapter \ref{the-simulation-library}.
+\cclass{cXMLElement} is documented in Chapter \ref{cha:the-simulation-library}.
 
 You can also XML parameters from omnetpp.ini:
 
