--- a/doc/src/manual/ch-simple-modules.tex
+++ b/doc/src/manual/ch-simple-modules.tex
@@ -1469,7 +1469,7 @@ something like a state machine\index{finite state machine}
 (FSM\index{FSM}) which hides the underlying function calls. Such
 systems are:
 \begin{itemize}
-  \item{OPNET{$^{(TM)}$ (MIL3, Inc.) which uses FSM's designed using a graphical editor;}
+  \item{OPNET$^TM$ which uses FSM's designed using a graphical editor;}
   \item{NetSim++ clones OPNET's approach;}
   \item{SMURPH (University of Alberta) defines a (somewhat eclectic)
       language to describe FSMs, and uses a precompiler to turn it
